--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -1,29 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-	 xmlns:android="http://schemas.android.com/apk/res/android"
-	 xmlns:app="http://schemas.android.com/apk/res-auto"
-	 xmlns:tools="http://schemas.android.com/tools"
-	 android:layout_height="match_parent"
-	 android:layout_width="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-	<LinearLayout
-		 android:layout_height="fill_parent"
-		 android:layout_width="fill_parent"
-		 android:orientation="vertical"
-		 android:id="@+id/content">
+    <LinearLayout
+        android:id="@+id/content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
 
-		<com.google.android.material.tabs.TabLayout
-			 android:layout_height="wrap_content"
-			 android:layout_width="match_parent"
-			 app:tabMode="scrollable"
-			 android:id="@+id/tabLayout" />
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabMode="scrollable" />
 
-		<androidx.viewpager2.widget.ViewPager2
-			 android:layout_height="match_parent"
-			 android:layout_width="match_parent"
-			 app:layout_behavior="@string/appbar_scrolling_view_behavior"
-			 android:id="@+id/viewPager2" />
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-	</LinearLayout>
+    </LinearLayout>
 
 </FrameLayout>
