--- a/app/src/main/res/layout/item_chip_group.xml
+++ b/app/src/main/res/layout/item_chip_group.xml
@@ -2,13 +2,13 @@
 
 <com.google.android.material.chip.ChipGroup xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="wrap_content"
+    android:id="@+id/players_chip_group"
     android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="16dp"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    android:layout_marginHorizontal="16dp"
-    app:chipSpacingVertical="4dp"
-    app:chipSpacingHorizontal="4dp"
     app:chipSpacing="0dp"
-    app:singleLine="false"
-    android:id="@+id/players_chip_group" />
+    app:chipSpacingHorizontal="4dp"
+    app:chipSpacingVertical="4dp"
+    app:singleLine="false" />
