--- a/app/src/main/res/layout/activity_crash.xml
+++ b/app/src/main/res/layout/activity_crash.xml
@@ -2,45 +2,45 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
-    android:fitsSystemWindows="true"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:fitsSystemWindows="true">
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <com.google.android.material.appbar.AppBarLayout
-            app:liftOnScroll="true"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent">
+            app:liftOnScroll="true">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/topAppBar"
-                android:layout_height="?attr/actionBarSize"
-                android:layout_width="match_parent" />
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
         <ScrollView
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:id="@+id/nested_scroll_view"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_width="match_parent">
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <HorizontalScrollView
-                android:layout_height="match_parent"
-                android:layout_width="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/result"
-                    android:textIsSelectable="true"
-                    android:layout_height="wrap_content"
                     android:layout_width="match_parent"
-                    android:textAppearance="?attr/textAppearanceBodyMedium"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="10dp"
                     android:paddingEnd="10dp"
-                    android:paddingStart="10dp" />
+                    android:textAppearance="?attr/textAppearanceBodyMedium"
+                    android:textIsSelectable="true" />
             </HorizontalScrollView>
 
         </ScrollView>
@@ -48,11 +48,11 @@
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/fab"
-        android:layout_gravity="end|bottom"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
         android:layout_width="wrap_content"
-        app:icon="@drawable/ic_content_copy"
-        android:text="@string/copy" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="20dp"
+        android:text="@string/copy"
+        app:icon="@drawable/ic_content_copy" />
 
 </FrameLayout>
