--- a/app/src/main/res/layout/dialog_bottom_sheet_base.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet_base.xml
@@ -1,57 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
-	android:orientation="vertical"
-	app:layout_behavior="@string/bottom_sheet_behavior"
-	style="@style/Widget.Material3.BottomSheet">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/Widget.Material3.BottomSheet"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    app:layout_behavior="@string/bottom_sheet_behavior">
 
-	<TextView
-		android:id="@+id/tv_bottom_sheet_dialog_base_title"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:gravity="center"
-		android:padding="16dp"
-		android:textColor="?android:attr/textColorPrimary"
-		android:textSize="20sp" />
+    <TextView
+        android:id="@+id/tv_bottom_sheet_dialog_base_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="16dp"
+        android:textColor="?android:attr/textColorPrimary"
+        android:textSize="20sp" />
 
-	<FrameLayout
-		android:id="@+id/container_bottom_sheet_dialog_base_content"
-		android:layout_width="match_parent"
-		android:layout_height="0dp"
-		android:layout_weight="1">
+    <FrameLayout
+        android:id="@+id/container_bottom_sheet_dialog_base_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
     </FrameLayout>
 
-	<LinearLayout
-		android:id="@+id/container_bottom_sheet_dialog_base_buttons"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:orientation="horizontal"
-		android:paddingStart="8dp"
-		android:paddingEnd="8dp"
-		android:weightSum="2">
+    <LinearLayout
+        android:id="@+id/container_bottom_sheet_dialog_base_buttons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:weightSum="2">
 
-		<com.google.android.material.button.MaterialButton
-			android:layout_height="match_parent"
-			android:layout_width="match_parent"
-			android:layout_margin="4dp"
-			android:singleLine="false"
-			android:layout_weight="1"
-			android:id="@+id/button_bottom_sheet_dialog_base_cancel"
-			android:text="@android:string/cancel" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_bottom_sheet_dialog_base_cancel"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:singleLine="false"
+            android:text="@android:string/cancel" />
 
-		<com.google.android.material.button.MaterialButton
-			android:layout_height="match_parent"
-			android:layout_width="match_parent"
-			android:visibility="gone"
-			android:layout_margin="4dp"
-			android:singleLine="false"
-			android:layout_weight="1"
-			android:id="@+id/button_bottom_sheet_dialog_base_ok"
-			android:text="@android:string/ok" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_bottom_sheet_dialog_base_ok"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:singleLine="false"
+            android:text="@android:string/ok"
+            android:visibility="gone" />
 
-	</LinearLayout>
+    </LinearLayout>
 </LinearLayout>
