--- a/app/src/main/res/layout/dialog_proress.xml
+++ b/app/src/main/res/layout/dialog_proress.xml
@@ -1,24 +1,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="15dp"
-    >
+    android:padding="15dp">
 
     <ProgressBar
         android:id="@+id/progress"
-        android:layout_centerVertical="true"
         android:layout_width="36dp"
-        android:layout_height="36dp"/>
+        android:layout_height="36dp"
+        android:layout_centerVertical="true" />
 
     <TextView
         android:id="@+id/msg"
-        
-        android:layout_marginLeft="15dp"
-        android:layout_toRightOf="@+id/progress"
-        android:layout_centerVertical="true"
+
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="15dp"
+        android:layout_toRightOf="@+id/progress" />
 </RelativeLayout>
