--- a/app/src/main/res/layout/fragment_anime_list.xml
+++ b/app/src/main/res/layout/fragment_anime_list.xml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/anime_list_frame"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/anime_list_frame">
+    android:layout_height="match_parent">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@id/container"
-        android:visibility="gone"
-        tools:visibility="visible"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-    >
+        android:visibility="gone"
+        tools:visibility="visible">
+
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appbar"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             app:elevation="0dp"
-            app:liftOnScroll="true"
-        >
+            app:liftOnScroll="true">
+
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="fill_parent"
                 android:layout_height="?actionBarSize"
                 android:paddingStart="0dp"
                 android:paddingEnd="0dp"
                 app:contentInsetStart="0dp"
-                app:layout_scrollFlags="scroll|enterAlways"
-            >
-                <include
+                app:layout_scrollFlags="scroll|enterAlways">
+
+            <include
                     android:id="@+id/layout_toolbar"
                     layout="@layout/layout_toolbar" />
             </androidx.appcompat.widget.Toolbar>
@@ -38,39 +37,40 @@
 
         <com.mrikso.anitube.app.view.CustomSwipeRefreshLayout
             android:id="@+id/swipe_refresh_layout"
-            android:layout_height="match_parent"
             android:layout_width="fill_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        >
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
             <LinearLayout
                 android:id="@+id/anime_list_content"
-                android:orientation="vertical"
-                android:paddingTop="8dp"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content">
-
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingTop="8dp">
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:layout_height="match_parent"
+                    android:id="@+id/anime_list_recycler_view"
                     android:layout_width="fill_parent"
+                    android:layout_height="match_parent"
                     android:orientation="vertical"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    android:id="@+id/anime_list_recycler_view" />
+                    tools:itemCount="5"
+                    tools:listitem="@layout/item_anime_release" />
 
                 <View
                     android:id="@+id/spacer"
-                    android:layout_height="0.5dp"
                     android:layout_width="wrap_content"
-                    android:layout_marginEnd="16dp"
+                    android:layout_height="0.5dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
-                    android:layout_marginStart="16dp" />
+                    android:layout_marginEnd="16dp" />
             </LinearLayout>
         </com.mrikso.anitube.app.view.CustomSwipeRefreshLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <include
-        tools:visibility="gone"
         android:id="@+id/load_state_layout"
-        layout="@layout/load_state_layout" />
+        layout="@layout/load_state_layout"
+        tools:visibility="gone" />
 
 </FrameLayout>
