--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,63 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/app_bar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:liftOnScroll="true"
-            android:id="@+id/app_bar_layout">
+            app:liftOnScroll="true">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
-                android:elevation="0dp"
-                android:layout_height="match_parent"
                 android:layout_width="match_parent"
-                app:title="@string/nav_profile"
-                app:navigationIcon="@drawable/ic_back"  />
+                android:layout_height="match_parent"
+                android:elevation="0dp"
+                app:navigationIcon="@drawable/ic_back"
+                app:title="@string/nav_profile" />
             <!--app:menu="@menu/profile_menu"-->
 
 
         </com.google.android.material.appbar.AppBarLayout>
+
         <com.mrikso.anitube.app.view.CustomSwipeRefreshLayout
             android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <androidx.core.widget.NestedScrollView
                 android:id="@+id/nested_scroll_view"
-                android:scrollbars="none"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fillViewport="true"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                android:overScrollMode="never">
+                android:overScrollMode="never"
+                android:scrollbars="none"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
                 <FrameLayout
                     android:id="@+id/content_frame"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent">
+
                     <LinearLayout
                         android:id="@+id/content"
-                        android:visibility="gone"
-                        tools:visibility="visible"
-                        android:layout_height="match_parent"
                         android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="15dp"
                         android:orientation="vertical"
-                        android:layout_marginTop="15dp">
+                        android:visibility="gone"
+                        tools:visibility="visible">
 
                         <include
                             android:id="@+id/layout_profile_header"
+                            layout="@layout/layout_profile_header"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            layout="@layout/layout_profile_header" />
+                            android:layout_height="wrap_content" />
 
                         <LinearLayout
                             android:id="@+id/user_info_container"
@@ -70,17 +73,17 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:orientation="vertical"
-                                android:paddingEnd="16dp"
-                                android:paddingBottom="6dp"
                                 android:paddingStart="16dp"
-                                android:paddingTop="6dp">
+                                android:paddingTop="6dp"
+                                android:paddingEnd="16dp"
+                                android:paddingBottom="6dp">
 
                                 <TableRow
-                                    android:visibility="gone"
                                     android:id="@+id/profile_profile_name_tr"
                                     android:layout_width="match_parent"
                                     android:layout_height="24dp"
-                                    android:orientation="horizontal">
+                                    android:orientation="horizontal"
+                                    android:visibility="gone">
 
                                     <TextView
                                         android:layout_width="wrap_content"
@@ -96,12 +99,13 @@
                                         android:layout_weight="1"
                                         android:textAlignment="textEnd" />
                                 </TableRow>
+
                                 <TableRow
                                     android:id="@+id/profile_city_tr"
-                                    android:visibility="gone"
                                     android:layout_width="match_parent"
                                     android:layout_height="24dp"
-                                    android:orientation="horizontal">
+                                    android:orientation="horizontal"
+                                    android:visibility="gone">
 
                                     <TextView
                                         android:layout_width="wrap_content"
@@ -137,6 +141,7 @@
                                         android:layout_weight="1"
                                         android:textAlignment="textEnd" />
                                 </TableRow>
+
                                 <TableRow
                                     android:layout_width="match_parent"
                                     android:layout_height="24dp"
@@ -159,10 +164,10 @@
 
                                 <TableRow
                                     android:id="@+id/profile_info_tr"
-                                    android:visibility="gone"
                                     android:layout_width="match_parent"
                                     android:layout_height="24dp"
-                                    android:orientation="horizontal">
+                                    android:orientation="horizontal"
+                                    android:visibility="gone">
 
                                     <TextView
                                         android:layout_width="wrap_content"
@@ -181,10 +186,10 @@
 
                                 <TableRow
                                     android:id="@+id/profile_status_tr"
-                                    android:visibility="gone"
                                     android:layout_width="match_parent"
                                     android:layout_height="24dp"
-                                    android:orientation="horizontal">
+                                    android:orientation="horizontal"
+                                    android:visibility="gone">
 
                                     <TextView
                                         android:layout_width="wrap_content"
@@ -205,24 +210,24 @@
                         </LinearLayout>
 
                         <Button
-                            android:layout_height="wrap_content"
-                            android:layout_width="wrap_content"
-                            android:visibility="gone"
-                            android:ellipsize="end"
-                            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                             android:id="@+id/edit_profile_btn"
+                            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="@string/profile_edit" />
+                            android:ellipsize="end"
+                            android:text="@string/profile_edit"
+                            android:visibility="gone" />
 
                     </LinearLayout>
 
                     <include
-                        tools:visibility="gone"
-                        android:layout_gravity="center"
                         android:id="@+id/load_state_layout"
+                        layout="@layout/load_state_layout"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        layout="@layout/load_state_layout" />
+                        android:layout_gravity="center"
+                        tools:visibility="gone" />
                 </FrameLayout>
 
             </androidx.core.widget.NestedScrollView>
