--- a/app/src/main/res/layout/fragment_screenshots.xml
+++ b/app/src/main/res/layout/fragment_screenshots.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.viewpager2.widget.ViewPager2
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.viewpager2.widget.ViewPager2 xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/view_pager_2"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/view_pager_2" />
+    android:layout_height="match_parent" />
