--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,15 +6,18 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:animateLayoutChanges="true">
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/container"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
+
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appbar"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             app:elevation="0dp">
+
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="fill_parent"
                 android:layout_height="?actionBarSize"
@@ -22,85 +25,97 @@
                 android:paddingEnd="0dp"
                 app:contentInsetStart="0dp"
                 app:layout_scrollFlags="scroll|enterAlways|snap">
+
                 <LinearLayout
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
                     android:id="@+id/search_linearLayout"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
                     android:paddingEnd="4dp">
+
                     <RelativeLayout
-                        android:gravity="center"
                         android:id="@+id/back"
-                        android:background="@drawable/transparent_circle_background"
-                        android:focusable="true"
-                        android:clickable="true"
                         android:layout_width="56dp"
-                        android:layout_height="56dp">
-                        <androidx.appcompat.widget.AppCompatImageView
+                        android:layout_height="56dp"
+                        android:background="@drawable/transparent_circle_background"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:gravity="center">
+
+                    <androidx.appcompat.widget.AppCompatImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/ic_back" />
                     </RelativeLayout>
+
                     <androidx.appcompat.widget.AppCompatAutoCompleteTextView
-                        android:textSize="16.0sp"
-                        android:ellipsize="end"
-                        android:gravity="start|center"
                         android:id="@+id/etSearch"
-                        android:background="@null"
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:hint="@string/search_for_anime"
-                        android:maxLines="1"
                         android:layout_weight="1.0"
-                        android:inputType="text"
+                        android:background="@null"
+                        android:ellipsize="end"
+                        android:gravity="start|center"
+                        android:hint="@string/search_for_anime"
                         android:imeOptions="actionSearch"
-                        android:paddingStart="16dp" />
+                        android:inputType="text"
+                        android:maxLines="1"
+                        android:paddingStart="16dp"
+                        android:textSize="16.0sp" />
 
                     <ImageView
                         android:id="@+id/clear"
-                        android:background="@drawable/transparent_circle_background"
-                        android:visibility="gone"
-                        android:clickable="true"
                         android:layout_width="48dp"
                         android:layout_height="48dp"
-                        android:src="@drawable/ic_close"
-                        android:scaleType="center"
-                        android:minWidth="48dp" />
-                    <RelativeLayout
-                        android:gravity="center"
-                        android:id="@+id/filter"
                         android:background="@drawable/transparent_circle_background"
-                        android:focusable="true"
-                        android:visibility="gone"
                         android:clickable="true"
+                        android:minWidth="48dp"
+                        android:scaleType="center"
+                        android:src="@drawable/ic_close"
+                        android:visibility="gone" />
+
+                    <RelativeLayout
+                        android:id="@+id/filter"
                         android:layout_width="48dp"
-                        android:layout_height="48dp">
-                        <androidx.appcompat.widget.AppCompatImageView
+                        android:layout_height="48dp"
+                        android:background="@drawable/transparent_circle_background"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:gravity="center"
+                        android:visibility="gone">
+
+                    <androidx.appcompat.widget.AppCompatImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/ic_filter_list" />
                     </RelativeLayout>
                 </LinearLayout>
             </androidx.appcompat.widget.Toolbar>
+
             <include
                 android:id="@+id/divider"
                 layout="@layout/layout_divider" />
         </com.google.android.material.appbar.AppBarLayout>
+
         <RelativeLayout
             android:id="@+id/content"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            tools:visibility="gone"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:visibility="visible">
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent" />
+                android:layout_height="fill_parent"
+                tools:itemCount="3"
+                tools:listitem="@layout/item_search" />
         </RelativeLayout>
+
         <include
-            tools:visibility="visible"
             android:id="@+id/load_state_layout"
-            layout="@layout/load_state_layout" />
+            layout="@layout/load_state_layout"
+            tools:visibility="visible" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </FrameLayout>
