--- a/app/src/main/res/layout/item_chip.xml
+++ b/app/src/main/res/layout/item_chip.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.google.android.material.chip.Chip
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/chip"
     style="@style/Widget.Material3.Chip.Assist"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-	android:id="@+id/chip"/>
+    android:layout_height="wrap_content" />
