--- a/app/src/main/res/layout/item_details_info_row.xml
+++ b/app/src/main/res/layout/item_details_info_row.xml
@@ -7,10 +7,10 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:paddingTop="5dp"
         android:paddingEnd="5dp"
-        android:paddingBottom="5dp"
-        android:orientation="horizontal">
+        android:paddingBottom="5dp">
 
         <ImageView
             android:id="@+id/iv_icon"
@@ -20,8 +20,8 @@
             android:layout_marginEnd="10dp"
             android:contentDescription="@null"
             android:visibility="gone"
-            tools:visibility="gone"
-            tools:src="@drawable/ic_bookmark_border" />
+            tools:src="@drawable/ic_bookmark_border"
+            tools:visibility="gone" />
 
         <TextView
             android:id="@+id/tv_title"
@@ -38,10 +38,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:paddingTop="5dp"
-        android:paddingStart="5dp"
-        android:paddingBottom="5dp"
         android:ellipsize="end"
+        android:paddingStart="5dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         tools:text="Row Value" />
 
 </TableRow>
