--- a/app/src/main/res/layout/item_franchise.xml
+++ b/app/src/main/res/layout/item_franchise.xml
@@ -1,94 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	 xmlns:android="http://schemas.android.com/apk/res/android"
-	 xmlns:app="http://schemas.android.com/apk/res-auto"
-	 android:layout_height="wrap_content"
-	 android:layout_width="fill_parent"
-	 android:paddingEnd="16dp"
-	 android:background="?attr/selectableItemBackground"
-	 android:orientation="horizontal"
-	 android:paddingBottom="10dp"
-	 android:paddingStart="16dp"
-	 android:paddingTop="10dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:toos="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackground"
+    android:orientation="horizontal"
+    android:paddingStart="16dp"
+    android:paddingTop="10dp"
+    android:paddingEnd="16dp"
+    android:paddingBottom="10dp">
 
-	<androidx.cardview.widget.CardView
-		 android:layout_height="64dp"
-		 android:layout_width="46dp"
-		 android:layout_margin="8dp"
-		 app:cardElevation="0dp"
-		 android:backgroundTint="@android:color/transparent"
-		 android:id="@+id/card_view">
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="46dp"
+        android:layout_height="64dp"
+        android:layout_margin="8dp"
+        android:backgroundTint="@android:color/transparent"
+        app:cardElevation="0dp">
 
-		<com.google.android.material.imageview.ShapeableImageView
-			 android:layout_height="fill_parent"
-			 android:layout_width="fill_parent"
-			 app:shapeAppearanceOverlay="@style/CardViewShapeableImageView"
-			 android:layout_alignParentLeft="true"
-			 android:layout_alignParentStart="true"
-			 android:layout_alignParentTop="true"
-			 android:id="@+id/poster" />
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/poster"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            app:shapeAppearanceOverlay="@style/CardViewShapeableImageView" />
 
-	</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
-	<LinearLayout
-		 android:layout_height="wrap_content"
-		 android:layout_width="fill_parent"
-		 android:orientation="vertical"
-		 android:layout_marginTop="4dp"
-		 android:layout_marginStart="16dp"
-		 android:layout_weight="1">
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-		<TextView
-			 android:layout_height="wrap_content"
-			 android:layout_width="wrap_content"
-			 android:ellipsize="end"
-			 style="@style/CardViewTitle"
-			 android:maxLines="3"
-			 android:id="@+id/tv_title" />
+        <TextView
+            android:id="@+id/tv_title"
+            style="@style/CardViewTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="3"
+            toos:text="Бліч" />
 
-		<LinearLayout
-			 android:layout_height="fill_parent"
-			 android:layout_width="fill_parent"
-			 android:visibility="visible"
-			 android:orientation="horizontal"
-			 android:layout_marginTop="2dp"
-			 android:id="@+id/year_layout">
+        <LinearLayout
+            android:id="@+id/year_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginTop="2dp"
+            android:orientation="horizontal"
+            android:visibility="visible">
 
-			<TextView
-				 android:layout_height="wrap_content"
-				 android:layout_width="wrap_content"
-				 style="@style/TextLabel"
-				 android:text="@string/year" />
+            <TextView
+                style="@style/TextLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/year" />
 
-			<TextView
-				 android:layout_height="wrap_content"
-				 android:layout_width="fill_parent"
-				 android:layout_marginStart="8dp"
-				 android:id="@+id/tv_year" />
+            <TextView
+                android:id="@+id/tv_year"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                toos:text="2020" />
 
-		</LinearLayout>
+        </LinearLayout>
 
-		<LinearLayout
-			 android:layout_height="fill_parent"
-			 android:layout_width="fill_parent"
-			 android:orientation="horizontal"
-			 android:layout_marginTop="2dp"
-			 android:id="@+id/episodes_layout">
+        <LinearLayout
+            android:id="@+id/episodes_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginTop="2dp"
+            android:orientation="horizontal">
 
-			<TextView
-				 android:layout_height="wrap_content"
-				 android:layout_width="wrap_content"
-				 style="@style/TextLabel"
-				 android:text="@string/series" />
+            <TextView
+                style="@style/TextLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/series" />
 
-			<TextView
-				 android:layout_height="wrap_content"
-				 android:layout_width="fill_parent"
-				 android:layout_marginStart="8dp"
-				 android:id="@+id/tv_episodes" />
+            <TextView
+                android:id="@+id/tv_episodes"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                toos:text="12" />
 
-		</LinearLayout>
+        </LinearLayout>
 
-	</LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
