--- a/app/src/main/res/layout/item_quality_speed.xml
+++ b/app/src/main/res/layout/item_quality_speed.xml
@@ -2,9 +2,8 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
-    android:textSize="14sp"
+    android:ellipsize="end"
     android:fontFamily="@font/roboto_regular"
     android:maxLines="1"
-    android:ellipsize="end">
-</TextView>
+    android:padding="16dp"
+    android:textSize="14sp"></TextView>
