--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -1,26 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:gravity="center_vertical"
-    android:orientation="horizontal"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_search_root"
-    android:clickable="true"
-    android:focusable="true"
-    android:background="?attr/selectableItemBackground"
     android:layout_width="fill_parent"
     android:layout_height="48dp"
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
     android:paddingStart="16dp"
     android:paddingEnd="16dp">
+
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/search_image_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingEnd="16dp"
         app:srcCompat="@drawable/ic_history" />
+
     <TextView
-        android:ellipsize="end"
         android:id="@+id/query_tv"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:maxLines="1" />
+        android:ellipsize="end"
+        android:maxLines="1"
+        tools:text="Наруто" />
 </LinearLayout>
