--- a/app/src/main/res/layout/item_simple.xml
+++ b/app/src/main/res/layout/item_simple.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="@dimen/list_item_height"
-	android:background="?attr/selectableItemBackground"
-	android:clickable="true"
-	android:focusable="true"
-	android:gravity="center_vertical"
-	android:orientation="horizontal"
-	android:paddingHorizontal="@dimen/list_horizontal_padding"
-	android:paddingVertical="@dimen/list_vertical_padding">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/list_item_height"
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:paddingHorizontal="@dimen/list_horizontal_padding"
+    android:paddingVertical="@dimen/list_vertical_padding">
 
-	<TextView
-		android:id="@+id/tv_name"
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-		android:layout_weight="1"
-		android:textAllCaps="true"
-		android:textAppearance="?attr/textAppearanceBody1"
-		tools:text="Назва елементу списку" />
+    <TextView
+        android:id="@+id/tv_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textAllCaps="true"
+        android:textAppearance="?attr/textAppearanceBody1"
+        tools:text="Назва елементу списку" />
 
-	<com.google.android.material.button.MaterialButton
-		android:id="@+id/read_more"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		style="?attr/materialIconButtonStyle"
-		app:icon="@drawable/ic_read_more"
-		android:contentDescription="@string/read_more_details" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/read_more"
+        style="?attr/materialIconButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/read_more_details"
+        app:icon="@drawable/ic_read_more" />
 
 </LinearLayout>
