--- a/app/src/main/res/layout/item_torrent.xml
+++ b/app/src/main/res/layout/item_torrent.xml
@@ -12,7 +12,7 @@
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_weight="1.0"
         android:textColor="?textColorPrimary"
@@ -35,10 +35,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="?textColorSecondary"
-                android:textSize="13sp" />
+                android:textSize="13sp"
+                tools:text="13 Gb" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.0"
                 android:paddingLeft="8dp"
