--- a/app/src/main/res/layout/item_tree.xml
+++ b/app/src/main/res/layout/item_tree.xml
@@ -7,8 +7,8 @@
 
     <TextView
         android:id="@+id/name"
-        android:layout_marginStart="4dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp" />
 
 </LinearLayout>
