--- a/app/src/main/res/layout/layout_bottom_send_comment.xml
+++ b/app/src/main/res/layout/layout_bottom_send_comment.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/sendMsgPanel"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -28,8 +28,8 @@
         android:textSize="16sp" />-->
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:id="@+id/comment_til"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -41,10 +41,9 @@
         android:hint="@string/your_comment"
         android:minHeight="56dp"
 
-        app:counterEnabled="true"
-        app:counterMaxLength="200"
         app:boxBackgroundMode="none"
-        >
+        app:counterEnabled="true"
+        app:counterMaxLength="200">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/comment_et"
@@ -53,9 +52,9 @@
             android:imeOptions="flagNoExtractUi"
             android:inputType="textMultiLine"
             android:lineSpacingExtra="1dp"
+            android:maxLength="200"
             android:maxLines="4"
-            android:textSize="16sp"
-            android:maxLength="200"/>
+            android:textSize="16sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <ProgressBar
@@ -67,20 +66,20 @@
         android:layout_centerVertical="true"
         android:layout_marginEnd="16dp"
         android:visibility="gone"
-        tools:visibility="gone"/>
+        tools:visibility="gone" />
 
     <Button
-        style="?attr/materialIconButtonStyle"
         android:id="@+id/send"
+        style="?attr/materialIconButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
+        android:contentDescription="@string/comments_send"
         android:paddingLeft="16dp"
         android:paddingTop="12dp"
         android:paddingRight="16dp"
         android:paddingBottom="12dp"
-        android:contentDescription="@string/comments_send"
         app:icon="@drawable/ic_send"
-        tools:visibility="visible"/>
+        tools:visibility="visible" />
 </RelativeLayout>
