--- a/app/src/main/res/layout/layout_divider.xml
+++ b/app/src/main/res/layout/layout_divider.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<View
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:layout_height="0.5dp"
-	android:layout_width="fill_parent"
-	android:layout_marginEnd="@dimen/layout_margin_end"
-	android:background="?attr/colorSurfaceVariant"
-	android:layout_marginStart="@dimen/layout_margin_start" />
+<View xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="0.5dp"
+    android:layout_marginStart="@dimen/layout_margin_start"
+    android:layout_marginEnd="@dimen/layout_margin_end"
+    android:background="?attr/colorSurfaceVariant" />
